...
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go"
        style="@style/MaterialButtonStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:icon="@drawable/baseline_arrow_forward_ios_32"
        app:layout_constraintEnd_toEndOf="parent"
...
